--- a/CourseV2.html
+++ b/CourseV2.html
@@ -205,13 +205,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="../chronos/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Course View</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="html/testers.html">Calendar View</a>
+          <a class="nav-link" href="html/calendar.html">Calendar View</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Settings</a>
@@ -234,9 +231,9 @@
 
     <div id="calendarcontainer">
       <div id="calendarinnercontainer">
-        <div id="calendarbar"></div>
+        <a href="html/calendar.html"><div id="calendarbar"></div>
         <h2>My Calendar</h2>
-        <img id="calendarimg" alt="calendar" src="IconPics/calendar.png">
+          <img id="calendarimg" alt="calendar" src="IconPics/calendar.png"></a>
       </div>
     </div>
 
