Navbar edit on calendar

--- a/html/calendar.html
+++ b/html/calendar.html
@@ -402,7 +402,7 @@
     margin: 20px 20px 20px 5px;
   }
     #homepagetitle {
-        font-size: 55px;
+        font-size: 70px;
         font-family: Cinzel;
         padding-left: 25px;
     }
@@ -410,7 +410,8 @@
     .navbar-toggler-icon {
         width: 3.5em;
         height: 3.5em;
-        background-size: 105% 105%;
+        background-size: 145% 145%;
+        margin: 20px 30px;
     }
 
     #navbarStyle {
@@ -577,17 +578,11 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Course View</a>
+          <a class="nav-link" href="../CourseV2.html">Course View</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Settings</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Log-out</a>
