styling for media queries

--- a/html/calendar.html
+++ b/html/calendar.html
@@ -402,7 +402,7 @@
     margin: 20px 20px 20px 5px;
   }
     #homepagetitle {
-        font-size: 70px;
+        font-size: 63px;
         font-family: Cinzel;
         padding-left: 25px;
     }
@@ -410,7 +410,7 @@
     .navbar-toggler-icon {
         width: 3.5em;
         height: 3.5em;
-        background-size: 145% 145%;
+        background-size: 125% 125%;
         margin: 20px 30px;
     }
 
@@ -429,7 +429,7 @@
       background-color: #f8f9fa;  
     }    
 
-    @media screen and (min-width: 1024px) and (max-height: 1410px) {
+    @media screen and (min-width: 824px) and (max-height: 1410px) {
     .content {
       max-width: 50%;
       margin-top: 23px;
@@ -514,6 +514,13 @@
       font-size: 17px;
       padding: 0;
       font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .navbar-toggler-icon {
+        width: 1.4em;
+        height: 1.4em;
+        background-size: 200% 100%;
+        margin: 0 10px;
     }
     #homepagetitle {
         font-size: 23px;
