--- a/html/comp1100.html
+++ b/html/comp1100.html
@@ -3,167 +3,135 @@
 <html lang="en">
 
 <head>
+  <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase-firestore.js"></script>
   <meta charset="utf-8">
   <title>COMP 1100</title>
-  <meta name="COMP 1100 LOADING PAGE" content="listing assignments in course">
+  <meta name="COMP 1930 LOADING PAGE" content="listing assignments in course">
   <meta name="William, Adam, Charlie" content="Chronos">
 
   <!-- Bootstrap for Mobile-first -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <!-- Firebase related things -->
-
-  <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
-
-  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-app.js"></script>
-
-  <!-- Add Firebase products that you want to use -->
-  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-firestore.js"></script>
-
-
-  <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
-
-
-  <!-- Optional styles and scripts of your own -->
-  <!-- <link rel="stylesheet" href="styles/style.css">-->
-  <!-- <script src="scripts/script.js"></script>-->
-
-  <script>
-    // Your web app's Firebase configuration
-    var firebaseConfig = {
-      apiKey: "AIzaSyDxcuP8iqbfPbtYPwAFh04xEc3SZ-JlNqs",
-      authDomain: "chronos-c7366.firebaseapp.com",
-      databaseURL: "https://chronos-c7366.firebaseio.com",
-      projectId: "chronos-c7366",
-      storageBucket: "chronos-c7366.appspot.com",
-      messagingSenderId: "821932163722",
-      appId: "1:821932163722:web:7531781e1df6f497342373"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    var db = firebase.firestore();
-  </script>
-
-
-
-
   <style>
-    <<<<<<< HEAD html,
-    body {
-      margin: 0px;
-      padding: 0px;
+    @import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow|Yeon+Sung&display=swap');
+    @import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
+
+    html {
+      margin: 0;
     }
 
     body {
-      background-image: url(../bgPics/blueiso.png);
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'PT Sans Narrow', sans-serif;
     }
 
-    .custom {
-      margin-left: 10px;
-      margin-bottom: 10px;
-      float: none;
-      align-content: center;
-      width: 95%;
+    .navbar {
+      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .45);
+      background-color: rgba(136, 210, 210, 0.12);
     }
 
-    #inputs {
-      margin-top: 10px;
-      background-color: white;
-      width: 54%;
-      margin-left: 25%;
-      border: 1px solid black;
-    }
-
-    form {
-      margin: 10px;
-      width: 210px;
-    }
-
-    form label {
+    #homepagetitle {
+      font-family: 'Cinzel';
+      font-size: 25pt;
+      margin: 0 auto;
+      padding: 0;
       font-weight: 600;
-      background-color: white;
-      display: inline-block;
-      text-align: right;
-      float: left;
     }
 
-    .form input {
-      display: inline-block;
-      text-align: left;
-      float: none;
-    }
-  </style>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
-  <!-- Optional styles and scripts of your own -->
-  <!-- <link rel="stylesheet" href="styles/style.css">-->
-  <!-- <script src="scripts/script.js"></script>-->
-  <style>
-    html,
-    body {
-      margin: 0px;
-      padding: 0px;
+    #maincontainer {
+      background-color: rgba(136, 210, 210, 0.30);
+      height: 100%;
     }
 
-    body {
-      background-image: url(../bgPics/blueiso.png);
-    }
-
-    .custom {
-      margin-left: 10px;
-      margin-bottom: 10px;
-      float: none;
+    #bannercontainer {
+      /*      background-image: url(IconPics/videoblocks-cartoon-workplace-modern-colorful-office-flat-animation-4k_bfgh8v7vdz_thumbnail-full09.png);*/
+      background-color: #8ac9cb;
+      background-size: 100% auto;
+      margin-bottom: 20px;
+      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
       align-content: center;
-      width: 95%;
     }
 
-    #inputs {
+    .bannerimage {
+      width: 100%;
+      height: auto;
+      margin: 0 auto;
+      filter: opacity(0.85);
+      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);
+    }
+
+    #bannercontainer h1 {
       margin-top: 10px;
-      background-color: white;
-      width: 54%;
-      margin-left: 25%;
-      border: 1px solid black;
-    }
-
-    form {
-      margin: 10px;
-      width: 210px;
-    }
-
-    form label {
+      margin-bottom: -50px;
+      font-size: 25pt;
+      color: white;
       font-weight: 600;
+      text-align: center;
+      z-index: 1;
+      position: relative;
+    }
+
+    #bannerpicturecontainer {
+      display: flex;
+      justify-content: center;
+      align-content: flex-end;
+      /*
+      margin-top: 10px;
+      margin-bottom: -10px;
+*/
+      /*
+      border-style: solid;
+      border-width: 8px;
+      border-color: white;
+*/
+    }
+
+    .testing {
+      width: 100%;
+      height: 100px;
+      align-content: center;
+      margin-left: 0 auto;
+      margin-bottom: 5px;
+      border-radius: 5px;
+
+/*      background-color: lightblue;*/
+/*      border: solid black 1px;*/
+    }
+
+    .list-group {
+      margin-top: -35px;
+    }
+
+    .list-group-item {
       background-color: white;
-      display: inline-block;
-      text-align: right;
+/*
+      border-style: solid;
+      border-color: white;
+*/
+/*      border-width: 3px;*/
+      height: 100%;
+      width: 100%;
+      margin: 0 auto;
+      margin-bottom: 0px;
+      box-shadow: 0 3px 7px 0px rgba(0, 0, 0, .35);
     }
 
-    .form input {
-      display: inline-block;
-      text-align: left;
-      float: none;
-    }
   </style>
-
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="../Course.html">Chronos</a>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="#"><span id="homepagetitle">COMP 1100</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -171,13 +139,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Course View</a>
+          <a class="nav-link" href="../CourseV2.html">Course View</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Calendar View</a>
+          <a class="nav-link" href="calendar.html">Calendar View</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
@@ -191,72 +159,106 @@
       </ul>
     </div>
   </nav>
-  <div id="titleBar" style="text-align: center"> COMP 1100 </div>
-  <div class="list-group">
-    <a href="#!" class="custom list-group-item list-group-item-action flex-column align-items-start">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1" id="item-1">List group item heading</h5>
-        <small>3 days ago</small>
-      </div>
-      <p class="mb-1" id="item-1-p">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-      <small>Donec id elit non mi porta.</small>
-    </a>
-    <a href="#!" class="custom list-group-item list-group-item-action flex-column align-items-start">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">List group item heading</h5>
 
+  <div id="maincontainer">
+    <div id="bannercontainer">
+      <!--      <h1>Business Analysis</h1>-->
+      <div id="bannerpicturecontainer">
+        <img class="bannerimage" alt="coursebanner" src="../IconPics/OrangeMoose.jpg">
+        <!--        <img class="bannerimage" alt="coursebanner" src="../IconPics/imageedit_4_3085042849.gif">-->
       </div>
-      <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-      <small class="text-muted">Donec id elit non mi porta.</small>
-    </a>
-    <a href="#!" class="custom list-group-item list-group-item-action flex-column align-items-start">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">List group item heading</h5>
-        <small class="text-muted">3 days ago</small>
-      </div>
-      <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-      <small class="text-muted">Donec id elit non mi porta.</small>
-    </a>
+    </div>
+
+    <div class="list-group">
+      <ul id="COMP1930-list"></ul>
+    </div>
   </div>
 
-  <script type="text/javascript">
-    function ExampleJS() {
-      var jFirst = document.getElementById("fname").value;
-      var jLast = document.getElementById("lname").value;
-      alert("Your name is: " + jFirst + " " + jLast);
-    }
-  </script>
 
-<!--
-
-  <div id="inputs">
-    <FORM NAME="myform" onSubmit="JavaScript:ExampleJS()">
-
-      <label>First Name:</label><input type="text" id="fname" name="firstname" class="textfield" /><br />
-      <label>Last Name:</label><input type="text" id="lname" name="lastname" class="textfield" /><br />
-      <input name="Submit" type="submit" value="Update" />
-    </FORM>
-  </div>
--->
-
+  <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script>
   <script>
-    db.collection('comp1100').doc('quiz1').onSnapshot(function(snap) {
-      document.getElementById("item-1").innerHTML = snap.data().title;
-      document.getElementById("item-1-p").innerHTML = snap.data().time;
-      document.getElementById("item-1-p").innerHTML = snap.data().date;
-    })
+    // Initialize Firebase
+    var firebaseConfig = {
+      apiKey: "AIzaSyDxcuP8iqbfPbtYPwAFh04xEc3SZ-JlNqs",
+      authDomain: "chronos-c7366.firebaseapp.com",
+      databaseURL: "https://chronos-c7366.firebaseio.com",
+      projectId: "chronos-c7366",
+      storageBucket: "chronos-c7366.appspot.com",
+      messagingSenderId: "821932163722",
+      appId: "1:821932163722:web:7531781e1df6f497342373"
+    };
+    // Initialize Firebase
 
 
-    //    firebase.auth().onAuthStateChanged(function(user) {
-    //      if (user) {
-    //        //        console.log(user.displayName);
-    //        document.getElementById("item-1").innerHTML = db.collection("comp1510").doc("quiz1").get();
-    //      } else {
-    //        console.log(user);
-    //      }
-    //    });
+    firebase.initializeApp(firebaseConfig);
 
-    //    db.collection("quotes").doc("777").set({ message: "username" })
+    const db = firebase.firestore();
+    const settings = {
+      /* your settings... */
+      timestampsInSnapshots: true
+    };
+
+
+    db.settings({
+      timestampsInSnapshots: true
+    });
+
+  </script>
+  <script>
+    const workList = document.querySelector('.list-group');
+
+    function renderWork(doc) {
+      let li = document.createElement('a');
+      li.classList.add("testing", "list-group-item", "list-group-item-action", "flex-column", "align-items-start");
+      let name = document.createElement('div');
+      let dueDate = document.createElement('p');
+      let cross = document.createElement('div');
+
+      var stringMonth = doc.data().dueDate + '';
+      var res = stringMonth.split("-"); // turn the date into a list format (Split by / if needed)
+      var months = ["Jan", "Feb", "March", "April", "May", "June", "July",
+        "August", "September", "October", "November", "December"
+      ];
+
+      dueDate.textContent = (months[res[1] - 1] + " " + [res[2]] + ", " + [res[0]]);
+
+      li.setAttribute('data-id', doc.id);
+      name.textContent = doc.data().name;
+
+      li.appendChild(name);
+      li.appendChild(dueDate);
+      li.appendChild(cross);
+
+      workList.appendChild(li);
+
+      // deleting data
+      cross.addEventListener('click', (e) => {
+        e.stopPropagation();
+        let id = e.target.parentElement.getAttribute('data-id');
+        db.collection('COMP1100').doc(id).delete();
+      });
+    }
+    // real-time listener
+
+
+    db.collection("COMP1100").orderBy("dueDate", "desc").onSnapshot(snapshot => {
+      let changes = snapshot.docChanges();
+      changes.forEach(change => {
+
+        console.log(change.doc.data());
+
+        if (change.type == 'added') {
+          renderWork(change.doc);
+
+        } else if (change.type == 'removed') {
+          let li = workList.querySelector('[data-id=' + change.doc.id + ']');
+          workList.removeChild(li);
+        }
+      });
+    });
+
   </script>
 
-</body></html>
+</body>
+
+</html>
