--- a/html/comp1116.html
+++ b/html/comp1116.html
@@ -7,7 +7,7 @@
   <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase-firestore.js"></script>
   <meta charset="utf-8">
   <title>COMP 1116</title>
-  <meta name="COMP 1116 LOADING PAGE" content="listing assignments in course">
+  <meta name="COMP 1930 LOADING PAGE" content="listing assignments in course">
   <meta name="William, Adam, Charlie" content="Chronos">
 
   <!-- Bootstrap for Mobile-first -->
@@ -18,49 +18,119 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
   <style>
-    .list-group-item {
-      background: linear-gradient(to left, #1e5799 0%,#2989d8 86%);
-      border-style: solid;
-    }
-    
-    .navbar {
-      background-color: rgba(29, 120, 179, 0.6);
-    }
-  </style>
+    @import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow|Yeon+Sung&display=swap');
+    @import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
 
-  <!-- Optional styles and scripts of your own -->
-  <!-- <link rel="stylesheet" href="styles/style.css">-->
-  <!-- <script src="scripts/script.js"></script>-->
-  <style>
-    .testing {
-      color: black;
-      width: 94%;
-      height: 100px;
-      padding-top: 0px;
-      padding-left: 5px;
+    html {
+      margin: 0;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'PT Sans Narrow', sans-serif;
+    }
+
+    .navbar {
+      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .45);
+      background-color: rgba(136, 210, 210, 0.12);
+    }
+
+    #homepagetitle {
+      font-family: 'Cinzel';
+      font-size: 25pt;
+      margin: 0 auto;
+      padding: 0;
+      font-weight: 600;
+    }
+
+    #maincontainer {
+      background-color: rgba(136, 210, 210, 0.30);
+      height: 100%;
+    }
+
+    #bannercontainer {
+      /*      background-image: url(IconPics/videoblocks-cartoon-workplace-modern-colorful-office-flat-animation-4k_bfgh8v7vdz_thumbnail-full09.png);*/
+      background-color: #8ac9cb;
+      background-size: 100% auto;
+      margin-bottom: 20px;
+      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
       align-content: center;
-      margin-left: 10px;
+    }
+
+    .bannerimage {
+      width: 100%;
+      height: auto;
+      margin: 0 auto;
+      filter: opacity(0.65);
+      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);
+    }
+
+    #bannercontainer h1 {
+      margin-top: 10px;
+      margin-bottom: -50px;
+      font-size: 25pt;
+      color: white;
+      font-weight: 600;
+      text-align: center;
+      z-index: 1;
+      position: relative;
+    }
+
+    #bannerpicturecontainer {
+      display: flex;
+      justify-content: center;
+      align-content: flex-end;
+      /*
+      margin-top: 10px;
+      margin-bottom: -10px;
+*/
+      /*
+      border-style: solid;
+      border-width: 8px;
+      border-color: white;
+*/
+    }
+
+    .testing {
+      width: 100%;
+      height: 100px;
+      align-content: center;
+      margin-left: 0 auto;
       margin-bottom: 5px;
       border-radius: 5px;
-      border: solid black 1px;
+
+      /*      background-color: lightblue;*/
+      /*      border: solid black 1px;*/
     }
-    li div:nth-child(1) {
-      font-size: 15pt;
+
+    .list-group {
+      margin-top: -35px;
     }
-    li div:nth-child(2) {
-      font-size: 10pt;
-    }
-    li p {
-      font-size: 12pt;
-      position: absolute;
-      top: 75%;
+
+    .list-group-item {
+      background-color: white;
+      /*
+      border-style: solid;
+      border-color: white;
+*/
+      /*      border-width: 3px;*/
+      height: 100%;
+      width: 100%;
+      margin: 0 auto;
+      margin-bottom: 0px;
+      box-shadow: 0 3px 7px 0px rgba(0, 0, 0, .35);
     }
   </style>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="../Course.html">Chronos</a>
+    <a class="navbar-brand" href="#"><span id="homepagetitle">COMP 1116</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -71,7 +141,7 @@
           <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../Course.html">Course View</a>
+          <a class="nav-link" href="../CourseV2.html">Course View</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="calendar.html">Calendar View</a>
@@ -89,10 +159,20 @@
     </div>
   </nav>
 
-  <div id="titleBar" style="text-align: center"> COMP 1116 </div>
-  <div class="list-group">
-    <ul id="COMP1116-list"></ul>
+  <div id="maincontainer">
+    <div id="bannercontainer">
+      <!--      <h1>Business Analysis</h1>-->
+      <div id="bannerpicturecontainer">
+        <img class="bannerimage" alt="coursebanner" src="../IconPics/RedMountain.jpg">
+        <!--        <img class="bannerimage" alt="coursebanner" src="../IconPics/imageedit_4_3085042849.gif">-->
+      </div>
+    </div>
+
+    <div class="list-group">
+      <ul id="COMP1930-list"></ul>
+    </div>
   </div>
+
   <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script>
   <script>
     // Initialize Firebase
@@ -125,28 +205,26 @@
     const workList = document.querySelector('.list-group');
 
     function renderWork(doc) {
-      let li = document.createElement('li');
+      let li = document.createElement('a');
       li.classList.add("testing", "list-group-item", "list-group-item-action", "flex-column", "align-items-start");
       let name = document.createElement('div');
       let dueDate = document.createElement('p');
       let cross = document.createElement('div');
-      let description = document.createElement('div');
 
       var stringMonth = doc.data().dueDate + '';
       var res = stringMonth.split("-"); // turn the date into a list format (Split by / if needed)
       var months = ["Jan", "Feb", "March", "April", "May", "June", "July",
         "August", "September", "October", "November", "December"
       ];
-      description.textContent = doc.data().description;
+
       dueDate.textContent = (months[res[1] - 1] + " " + [res[2]] + ", " + [res[0]]);
 
       li.setAttribute('data-id', doc.id);
       name.textContent = doc.data().name;
 
       li.appendChild(name);
-      li.appendChild(description);
       li.appendChild(dueDate);
-      
+      li.appendChild(cross);
 
       workList.appendChild(li);
 
@@ -174,7 +252,6 @@
           workList.removeChild(li);
         }
       });
-
     });
   </script>
 
