updating posting form to show selected courses due dates

--- a/html/comp1116post.html
+++ b/html/comp1116post.html
@@ -16,6 +16,7 @@
             <form id="add-1116-form" style="margin-bottom: 7%" >
                 <p>Which course do you want to add an assignement to?</p>
                 <select name="courseSelect" id="wow">
+                    <option value=""></option>
                     <option value="COMP1100">COMP1100</option>
                     <option value="COMP1113">COMP1113</option>
                     <option value="COMP1116">COMP1116</option>
