Homepage and Course pages final update #1

--- a/Course.html
+++ b/Course.html
@@ -245,18 +245,19 @@
           <a class="linkBox" href="html/comp1100.html">
             <div class="titleBox"></div>
             <p>COMP<br/>1100</p>
-                        
           </a>
         </div>
       </div>
       <div class="box">
         <div class="boxInner">
-          <p>COMM<br />1116</p>
+          <div class="titleBox"></div>
+          <p>COMM<br/>1116</p>
           <!--          <div class="titleBox">Items Due: 3</div>-->
         </div>
       </div>
       <div class="box">
         <div class="boxInner">
+          <div class="titleBox"></div>
           <p>COMP<br />1113</p>
           <!--          <div class="titleBox">Items Due: 3</div>-->
         </div>
@@ -264,6 +265,7 @@
       <div class="box">
         <div class="boxInner">
           <a class="linkBox" href="html/comp1510.html">
+            <div class="titleBox"></div>
             <p>COMP<br />1510</p>
             <!--            <div class="titleBox">Items Due: 3</div>-->
           </a>
@@ -271,6 +273,7 @@
       </div>
       <div class="box">
         <div class="boxInner">
+          <div class="titleBox"></div>
           <p>COMM<br />1536</p>
           <!--          <div class="titleBox">Items Due: 3</div>-->
         </div>
@@ -278,12 +281,15 @@
       <div class="box">
         <div class="boxInner">
           <a class="linkBox" href="html/comp1712.html">
+            <div class="titleBox"></div>
           <p>COMP<br/>1712</p>
           <!--          <div class="titleBox">Items Due: 3</div>-->
+          </a>
         </div>
       </div>
       <div class="box">
         <div class="boxInner">
+          <div class="titleBox"></div>
           <p>COMP<br />1930</p>
           <!--          <div class="titleBox">Items Due: 3</div>-->
         </div>
