--- a/html/comp1100.html
+++ b/html/comp1100.html
@@ -103,9 +103,6 @@
       margin-left: 0 auto;
       margin-bottom: 5px;
       border-radius: 5px;
-
-/*      background-color: lightblue;*/
-/*      border: solid black 1px;*/
     }
 
     .list-group {
@@ -114,16 +111,56 @@
 
     .list-group-item {
       background-color: white;
-/*
-      border-style: solid;
-      border-color: white;
-*/
-/*      border-width: 3px;*/
       height: 100%;
       width: 100%;
       margin: 0 auto;
       margin-bottom: 0px;
       box-shadow: 0 3px 7px 0px rgba(0, 0, 0, .35);
+    }
+
+    @media screen and (min-width: 768px) {
+
+      #maincontainer {
+        display: flex;
+        position: relative;
+
+      }
+
+      #bannercontainer {
+        height: 100vh;
+        width: 100vw;
+        margin: 0;
+        background: url(../IconPics/OrangeMoose.jpg) no-repeat center center fixed;
+        background-size: cover;
+      }
+      
+      #bannercontainer:after {
+        content: "";
+        background-color: rgba(136, 210, 210, 0.12);
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        z-index: 0;
+        filter: opacity(0.45);
+      }
+
+      .bannerimage {
+        display: none;
+      }
+
+      .list-group {
+        position: absolute;
+        right: 50%;
+        top: 80px;
+        width: 500px;
+        transform: translateX(250px);
+      }
+
+      .list-group-item {
+        margin-bottom: 5px;
+      }
     }
 
   </style>
