--- a/html/calendar.html
+++ b/html/calendar.html
@@ -722,10 +722,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Course View</a>
+          <a class="nav-link" href="../CourseV4.html">Course View</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Settings</a>
