--- a/CourseV4.html
+++ b/CourseV4.html
@@ -77,13 +77,13 @@
     #bannercontainer {
       background-color: rgba(138, 201, 203);
       background-size: 100% 100%;
-      min-height: 130px;
+/*      min-height: 130px;*/
       box-shadow: 0 2px 5px 0px rgba(0, 0, 0, .35);
       display: flex;
       justify-content: center;
       flex-direction: column;
       align-content: center;
-      max-height: 330px;
+/*      max-height: 330px;*/
     }
 
     #bannerimage {
