--- a/html/comp1510.html
+++ b/html/comp1510.html
@@ -64,7 +64,7 @@
 
     .bannerimage {
       width: 100%;
-      height: auto;
+      min-height: 200px;
       margin: 0 auto;
       filter: opacity(0.65);
       box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);
