--- a/html/comp1113.html
+++ b/html/comp1113.html
@@ -64,7 +64,7 @@
 
     .bannerimage {
       width: 100%;
-      height: auto;
+      max-height: 195px;
       margin: 0 auto;
       filter: opacity(0.80);
       box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);
