--- a/CourseV4.html
+++ b/CourseV4.html
@@ -93,7 +93,7 @@
       width: 260px;
 */
       width: 80%;
-      max-height: 195px;
+/*      max-height: 195px;*/
       max-width: 280px;
       margin: 0 auto;
     }
