--- a/html/calendar.html
+++ b/html/calendar.html
@@ -728,7 +728,7 @@
           <a class="nav-link" href="../CourseV4.html">Course View</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Settings</a>
+          <a class="nav-link" href="comp1116post.html">Admin test</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
