--- a/html/comp1100.html
+++ b/html/comp1100.html
@@ -68,6 +68,7 @@
       margin: 0 auto;
       filter: opacity(0.85);
       box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);
+        max-height: 195px;
     }
 
     #bannercontainer h1 {
