--- a/html/comp1100.html
+++ b/html/comp1100.html
@@ -86,6 +86,7 @@
       display: flex;
       justify-content: center;
       align-content: flex-end;
+        max-height: 195px;
       /*
       margin-top: 10px;
       margin-bottom: -10px;
