--- a/html/comp1100.html
+++ b/html/comp1100.html
@@ -23,6 +23,8 @@
 
     html {
       margin: 0;
+      background: url(../IconPics/OrangeMoose.jpg) repeat center center fixed;
+      background-size: cover;
     }
 
     body {
@@ -55,7 +57,7 @@
       background-color: #8ac9cb;
       background-size: 100% auto;
       margin-bottom: 20px;
-      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);
+/*      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);*/
       display: flex;
       justify-content: center;
       flex-direction: column;
@@ -67,7 +69,7 @@
       max-height: 195px;
       margin: 0 auto;
       filter: opacity(0.85);
-      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);
+/*      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);*/
         max-height: 195px;
     }
 
@@ -132,20 +134,20 @@
         height: 100vh;
         width: 100vw;
         margin: 0;
-        background: url(../IconPics/OrangeMoose.jpg) no-repeat center center fixed;
+        background: url(../IconPics/OrangeMoose.jpg) repeat center center fixed;
         background-size: cover;
       }
       
       #bannercontainer:after {
         content: "";
-        background-color: rgba(136, 210, 210, 0.12);
+/*        background-color: rgba(136, 210, 210, 0.12);*/
         top: 0;
         left: 0;
         bottom: 0;
         right: 0;
         position: absolute;
         z-index: 0;
-        filter: opacity(0.45);
+/*        filter: opacity(0.45);*/
       }
 
       .bannerimage {
