--- a/html/comp1930.html
+++ b/html/comp1930.html
@@ -23,6 +23,8 @@
 
     html {
       margin: 0;
+      background: url(../IconPics/PurpleMoon.jpg) repeat center center fixed;
+      background-size: cover;
     }
 
     body {
@@ -55,7 +57,7 @@
       background-color: #8ac9cb;
       background-size: 100% auto;
       margin-bottom: 20px;
-      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);
+/*      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);*/
       display: flex;
       justify-content: center;
       flex-direction: column;
@@ -138,13 +140,13 @@
         height: 100vh;
         width: 100vw;
         margin: 0;
-        background: url(../IconPics/PurpleMoon.jpg) no-repeat center center fixed;
+        background: url(../IconPics/PurpleMoon.jpg) repeat center center fixed;
         background-size: cover;
       }
 
       #bannercontainer:after {
         content: "";
-        background-color: rgba(136, 210, 210, 0.12);
+/*        background-color: rgba(136, 210, 210, 0.12);*/
         top: 0;
         left: 0;
         bottom: 0;
