--- a/html/comp1113.html
+++ b/html/comp1113.html
@@ -183,7 +183,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="../CourseV4.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="../CourseV4.html">Course View</a>
@@ -192,13 +192,13 @@
           <a class="nav-link" href="calendar.html">Calendar View</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="../index.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Settings</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Log Out</a>
+          <a class="nav-link" href="../index.html">Log Out</a>
         </li>
       </ul>
     </div>
@@ -281,13 +281,13 @@
       cross.addEventListener('click', (e) => {
         e.stopPropagation();
         let id = e.target.parentElement.getAttribute('data-id');
-        db.collection('COMP1930').doc(id).delete();
+        db.collection('COMP1113').doc(id).delete();
       });
     }
     // real-time listener
 
 
-    db.collection("COMP1930").orderBy("dueDate", "desc").onSnapshot(snapshot => {
+    db.collection("COMP1113").orderBy("dueDate", "desc").onSnapshot(snapshot => {
       let changes = snapshot.docChanges();
       changes.forEach(change => {
 
