--- a/html/comp1510.html
+++ b/html/comp1510.html
@@ -183,22 +183,22 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="../CourseV4.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../CourseV4.ht  ml">Course View</a>
+          <a class="nav-link" href="../CourseV4.html">Course View</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="calendar.html">Calendar View</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="../index.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Settings</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Log Out</a>
+          <a class="nav-link" href="../index.html">Log Out</a>
         </li>
       </ul>
     </div>
