--- a/html/comp1930.html
+++ b/html/comp1930.html
@@ -29,9 +29,6 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="../CourseV4.html">Home <span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="../CourseV4.html">Course View</a>
         </li>
@@ -39,7 +36,7 @@
           <a class="nav-link" href="calendar.html">Calendar View</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">About</a>
+          <a class="nav-link" href="../index.html#about">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Settings</a>
