--- a/html/calendar.html
+++ b/html/calendar.html
@@ -38,9 +38,6 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="../CourseV4.html">Course View</a>
         </li>
@@ -48,7 +45,7 @@
           <a class="nav-link" href="coursePoster.html">Admin test</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="../index.html#about">About</a>
         </li>
         <li class="nav-item">
           <a id="logout" class="nav-link" href="../index.html">Log-out</a>
